syntax = "proto3";

package  blog;

option go_package = "blogpb";

message Blog {
	string id = 1;
	string author_id = 2;
	string title  = 3;
	string content = 4;
}

message CreateBlogReq {
	Blog blog = 1;
}

message CreateBlogRes {
	string id = 1;
}

message ReadBlogReq {
	string id = 1;
}

message ReadBlogRes {
	Blog blog  = 1;
}

message UpdateBlogReq {
	Blog blog = 1;
}

message UpdateBlogRes {
	Blog blog  = 1;
}

message DelBlogReq {
	string id = 1;
}

message DelBlogRes {
	string id  = 1;
}

message ListBlogReq {
}

message ListBlogRes {
	Blog blog  = 1;
}

service BlogService {
	rpc CreateBlog(CreateBlogReq) returns (CreateBlogRes){};
	rpc ReadBlog(ReadBlogReq) returns (ReadBlogRes ) {};
	rpc UpdateBlog(UpdateBlogReq) returns (UpdateBlogRes ) {};
	rpc DelBlog(DelBlogReq) returns (DelBlogRes ) {};
	rpc ListBlog(ListBlogReq) returns (stream ListBlogRes) {};
}
